# sort-lines

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  sort_lines.py  tox.ini
.github/workflows/: tests.yaml
tests/: sort_lines_test.py
tests/features/: case_sensitivity_test.py  python_test.py
