[metadata]
name = sort_lines
version = 0.3.0
description = alphabetize lines in files
long_description = file: README.md
long_description_content_type = text/markdown
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source = https://github.com/samueljsb/sort-lines
    Changelog = https://github.com/samueljsb/sort-lines/blob/main/CHANGELOG.md

[options]
py_modules = sort_lines
python_requires = >=3.9

[options.entry_points]
console_scripts =
    sort-lines = sort_lines:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_incomplete_defs = false
disallow_untyped_defs = false
